@@ -6,3 +6,4 @@ STFLE facility is installed
 the value of cc is 3 and #double words is 2
 the value of cc is 3 and #double words is 2
 The z/Architecture architectural mode is installed and active
+No MSA facility available
